# tiagommt.com

./: .dockerignore  .gitignore  .prettierignore  Dockerfile.deploy  LICENSE.txt  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  tiagommt.code-workspace  tsconfig.json  vite.config.mts
.github/workflows/: main.yml
services/: README.md
services/b-actix/: .gitignore  Cargo.toml  Dockerfile  README.md  configuration.example.yaml  configuration.yaml  entrypoint.sh
services/b-actix/src/: configuration.rs  lib.rs  main.rs  startup.rs
services/b-actix/src/routes/: cv.rs  health_check.rs  mod.rs
services/b-actix/src/schemas/: cv.rs  health_check.rs
services/b-actix/tests/: helpers.rs
services/b-actix/tests/routes/: cv.rs  health_check.rs  mod.rs
services/b-db/: Dockerfile  create.sql
services/f-main/: .dockerignore  .eslintrc.json  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
services/f-main/src/: App.tsx  index.tsx
services/f-ui/: README.md  package.json
services/f-ui/public/: index.html
services/nginx/: Dockerfile.deploy  default.conf
services/ui/: .eslintrc.json  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
services/ui/src/: App.tsx  index.css  index.tsx  react-app-env.d.ts
src/: index.css  index.tsx
src/components/Button/: styles.css
src/components/Cta/: Cta.types.ts  CtaWeb1.tsx  CtaWeb2.tsx  index.ts  (+1 more)
src/pages/: Main.tsx
src/state/: hooks.ts  store.ts
src/typings/: base.types.ts
(+83 files in other folders)
