[package]
name = "b-actix"
version = "0.1.0"
authors = ["Tiago Tavares <bigtavadev@gmail.com>"]
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "b-actix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
anyhow = "1"
chrono = { version = "0.4.34", features = ["serde"] }
config = "0.14.0"
dotenv = "0.15.0"
env_logger = "0.11.2"
envy = "0.4.2"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
tracing-actix-web = "0.7.9"
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.24"
